// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`statistic demo > renders _semantic correctly 1`] = `
<div
  class="semantic-preview-container"
  data-v-dfc8ebef=""
>
  <div
    class="ant-row css-var-root semantic-preview-row"
    data-v-dfc8ebef=""
  >
    <div
      class="ant-col ant-col-16 css-var-root semantic-preview-col"
      data-v-dfc8ebef=""
    >
      <div
        style="position: absolute;"
      >
        <div
          class="ant-statistic semantic-mark-root css-var-v-0"
        >
          <div
            class="ant-statistic-header semantic-mark-header"
          >
            <div
              class="ant-statistic-title semantic-mark-title"
            >
              Active
            </div>
          </div>
          <div
            class="ant-statistic-content semantic-mark-content"
            style="color: rgb(63, 134, 0);"
          >
            <span
              class="ant-statistic-content-prefix semantic-mark-prefix"
            >
              <span
                aria-label="arrow-up"
                class="anticon anticon-arrow-up"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="arrow-up"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M868 545.5L536.1 163a31.96 31.96 0 00-48.3 0L156 545.5a7.97 7.97 0 006 13.2h81c4.6 0 9-2 12.1-5.5L474 300.9V864c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V300.9l218.9 252.3c3 3.5 7.4 5.5 12.1 5.5h81c6.8 0 10.5-8 6-13.2z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="ant-statistic-content-value"
            >
              <span
                class="ant-statistic-content-value-int"
              >
                11
              </span>
              <span
                class="ant-statistic-content-value-decimal"
              >
                .28
              </span>
            </span>
            <span
              class="ant-statistic-content-suffix semantic-mark-suffix"
            >
              %
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-col ant-col-8 css-var-root"
      data-v-dfc8ebef=""
    >
      <ul
        class="semantic-list"
        data-v-dfc8ebef=""
      >
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  root
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <span
                  class="ant-tag ant-tag-filled ant-tag-blue css-var-root"
                  data-v-dfc8ebef=""
                >
                  1.0.0
                  <!---->
                  <!---->
                  <!---->
                </span>
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Root element with reset styles and overall container styles for statistic component
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  header
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <span
                  class="ant-tag ant-tag-filled ant-tag-blue css-var-root"
                  data-v-dfc8ebef=""
                >
                  1.0.0
                  <!---->
                  <!---->
                  <!---->
                </span>
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Header element with bottom padding and title area layout styles
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  title
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <span
                  class="ant-tag ant-tag-filled ant-tag-blue css-var-root"
                  data-v-dfc8ebef=""
                >
                  1.0.0
                  <!---->
                  <!---->
                  <!---->
                </span>
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Title element with text color, font size and other title text display styles
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  prefix
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <span
                  class="ant-tag ant-tag-filled ant-tag-blue css-var-root"
                  data-v-dfc8ebef=""
                >
                  1.0.0
                  <!---->
                  <!---->
                  <!---->
                </span>
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Prefix element with inline-block display, right margin and other prefix content layout styles
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  content
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <span
                  class="ant-tag ant-tag-filled ant-tag-blue css-var-root"
                  data-v-dfc8ebef=""
                >
                  1.0.0
                  <!---->
                  <!---->
                  <!---->
                </span>
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Content element with text color, font size, font family and other numeric content display styles
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  suffix
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <span
                  class="ant-tag ant-tag-filled ant-tag-blue css-var-root"
                  data-v-dfc8ebef=""
                >
                  1.0.0
                  <!---->
                  <!---->
                  <!---->
                </span>
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Suffix element with inline-block display, left margin and other suffix content layout styles
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`statistic demo > renders basic correctly 1`] = `
<div
  class="ant-row css-var-root"
  style="margin-left: -8px; margin-right: -8px;"
>
  <div
    class="ant-col ant-col-12 css-var-root"
    style="padding-left: 8px; padding-right: 8px;"
  >
    <div
      class="ant-statistic css-var-root"
    >
      <div
        class="ant-statistic-header"
      >
        <div
          class="ant-statistic-title"
        >
          Active Users
        </div>
      </div>
      <div
        class="ant-statistic-content"
      >
        <!---->
        <span
          class="ant-statistic-content-value"
        >
          <span
            class="ant-statistic-content-value-int"
          >
            112,893
          </span>
        </span>
        <!---->
      </div>
    </div>
  </div>
  <div
    class="ant-col ant-col-12 css-var-root"
    style="padding-left: 8px; padding-right: 8px;"
  >
    <div
      class="ant-statistic css-var-root"
    >
      <div
        class="ant-statistic-header"
      >
        <div
          class="ant-statistic-title"
        >
          Account Balance (CNY)
        </div>
      </div>
      <div
        class="ant-statistic-content"
      >
        <!---->
        <span
          class="ant-statistic-content-value"
        >
          <span
            class="ant-statistic-content-value-int"
          >
            112,893
          </span>
          <span
            class="ant-statistic-content-value-decimal"
          >
            .00
          </span>
        </span>
        <!---->
      </div>
    </div>
    <button
      class="ant-btn css-var-root ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
      style="margin: 16px;"
      type="button"
    >
      <transition-stub
        appear="false"
        css="true"
        name="ant-btn-loading-icon-motion"
        persisted="false"
      >
        <!---->
      </transition-stub>
      <span>
         Recharge 
      </span>
      <!---->
    </button>
  </div>
  <div
    class="ant-col ant-col-12 css-var-root"
    style="padding-left: 8px; padding-right: 8px;"
  >
    <div
      class="ant-statistic css-var-root"
    >
      <div
        class="ant-statistic-header"
      >
        <div
          class="ant-statistic-title"
        >
          Active Users
        </div>
      </div>
      <div
        class="ant-skeleton ant-skeleton-active ant-statistic-skeleton css-var-root"
      >
        <!---->
        <div
          class="ant-skeleton-section"
        >
          <h3
            class="ant-skeleton-title"
          />
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`statistic demo > renders card correctly 1`] = `
<div
  class="ant-row css-var-root"
  style="margin-left: -8px; margin-right: -8px;"
>
  <div
    class="ant-col ant-col-12 css-var-root"
    style="padding-left: 8px; padding-right: 8px;"
  >
    <div
      class="ant-card css-var-root"
    >
      <!---->
      <!---->
      <div
        class="ant-card-body"
      >
        <div
          class="ant-statistic css-var-root"
        >
          <div
            class="ant-statistic-header"
          >
            <div
              class="ant-statistic-title"
            >
              Active
            </div>
          </div>
          <div
            class="ant-statistic-content"
            style="color: rgb(63, 134, 0);"
          >
            <span
              class="ant-statistic-content-prefix"
            >
              <span
                aria-label="arrow-up"
                class="anticon anticon-arrow-up"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="arrow-up"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M868 545.5L536.1 163a31.96 31.96 0 00-48.3 0L156 545.5a7.97 7.97 0 006 13.2h81c4.6 0 9-2 12.1-5.5L474 300.9V864c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V300.9l218.9 252.3c3 3.5 7.4 5.5 12.1 5.5h81c6.8 0 10.5-8 6-13.2z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="ant-statistic-content-value"
            >
              <span
                class="ant-statistic-content-value-int"
              >
                11
              </span>
              <span
                class="ant-statistic-content-value-decimal"
              >
                .28
              </span>
            </span>
            <span
              class="ant-statistic-content-suffix"
            >
              %
            </span>
          </div>
        </div>
      </div>
      <!---->
    </div>
  </div>
  <div
    class="ant-col ant-col-12 css-var-root"
    style="padding-left: 8px; padding-right: 8px;"
  >
    <div
      class="ant-card css-var-root"
    >
      <!---->
      <!---->
      <div
        class="ant-card-body"
      >
        <div
          class="ant-statistic css-var-root"
        >
          <div
            class="ant-statistic-header"
          >
            <div
              class="ant-statistic-title"
            >
              Idle
            </div>
          </div>
          <div
            class="ant-statistic-content"
            style="color: rgb(207, 19, 34);"
          >
            <span
              class="ant-statistic-content-prefix"
            >
              <span
                aria-label="arrow-down"
                class="anticon anticon-arrow-down"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="arrow-down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M862 465.3h-81c-4.6 0-9 2-12.1 5.5L550 723.1V160c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v563.1L255.1 470.8c-3-3.5-7.4-5.5-12.1-5.5h-81c-6.8 0-10.5 8.1-6 13.2L487.9 861a31.96 31.96 0 0048.3 0L868 478.5c4.5-5.2.8-13.2-6-13.2z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="ant-statistic-content-value"
            >
              <span
                class="ant-statistic-content-value-int"
              >
                9
              </span>
              <span
                class="ant-statistic-content-value-decimal"
              >
                .30
              </span>
            </span>
            <span
              class="ant-statistic-content-suffix"
            >
              %
            </span>
          </div>
        </div>
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`statistic demo > renders style-class correctly 1`] = `
<div
  class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-middle ant-flex-vertical"
  data-v-739f6bf9=""
>
  <div
    class="ant-statistic custom-statistic-root css-var-root"
    data-v-739f6bf9=""
  >
    <div
      class="ant-statistic-header"
    >
      <div
        class="ant-statistic-title"
        style="color: rgb(24, 144, 255);"
      >
        Monthly Active Users
      </div>
    </div>
    <div
      class="ant-statistic-content"
      style="font-size: 24px;"
    >
      <span
        class="ant-statistic-content-prefix"
      >
        <span
          aria-label="arrow-up"
          class="anticon anticon-arrow-up"
          data-v-739f6bf9=""
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="arrow-up"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M868 545.5L536.1 163a31.96 31.96 0 00-48.3 0L156 545.5a7.97 7.97 0 006 13.2h81c4.6 0 9-2 12.1-5.5L474 300.9V864c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V300.9l218.9 252.3c3 3.5 7.4 5.5 12.1 5.5h81c6.8 0 10.5-8 6-13.2z"
            />
          </svg>
        </span>
      </span>
      <span
        class="ant-statistic-content-value"
      >
        <span
          class="ant-statistic-content-value-int"
        >
          93,241
        </span>
      </span>
      <span
        class="ant-statistic-content-suffix"
      >
        users
      </span>
    </div>
  </div>
  <div
    class="ant-statistic custom-statistic-root css-var-root"
    data-v-739f6bf9=""
  >
    <div
      class="ant-statistic-header"
    >
      <div
        class="ant-statistic-title"
        style="color: rgb(255, 77, 79);"
      >
        Yearly Loss
      </div>
    </div>
    <div
      class="ant-statistic-content"
      style="color: rgb(255, 120, 117);"
    >
      <span
        class="ant-statistic-content-prefix"
      >
        <span
          aria-label="arrow-down"
          class="anticon anticon-arrow-down"
          data-v-739f6bf9=""
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="arrow-down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M862 465.3h-81c-4.6 0-9 2-12.1 5.5L550 723.1V160c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v563.1L255.1 470.8c-3-3.5-7.4-5.5-12.1-5.5h-81c-6.8 0-10.5 8.1-6 13.2L487.9 861a31.96 31.96 0 0048.3 0L868 478.5c4.5-5.2.8-13.2-6-13.2z"
            />
          </svg>
        </span>
      </span>
      <span
        class="ant-statistic-content-value"
      >
        <span
          class="ant-statistic-content-value-int"
        >
          -
          18
        </span>
        <span
          class="ant-statistic-content-value-decimal"
        >
          .7
        </span>
      </span>
      <span
        class="ant-statistic-content-suffix"
      >
        %
      </span>
    </div>
  </div>
</div>
`;

exports[`statistic demo > renders timer correctly 1`] = `
<div
  class="ant-row css-var-root"
  style="margin-left: -8px; margin-right: -8px;"
>
  <div
    class="ant-col ant-col-12 css-var-root"
    style="padding-left: 8px; padding-right: 8px;"
  >
    <div
      class="ant-statistic css-var-root"
    >
      <!---->
      <div
        class="ant-statistic-content"
      >
        <!---->
        <span
          class="ant-statistic-content-value"
        >
          -
        </span>
        <!---->
      </div>
    </div>
  </div>
  <div
    class="ant-col ant-col-12 css-var-root"
    style="padding-left: 8px; padding-right: 8px;"
  >
    <div
      class="ant-statistic css-var-root"
    >
      <div
        class="ant-statistic-header"
      >
        <div
          class="ant-statistic-title"
        >
          Million Seconds
        </div>
      </div>
      <div
        class="ant-statistic-content"
      >
        <!---->
        <span
          class="ant-statistic-content-value"
        >
          -
        </span>
        <!---->
      </div>
    </div>
  </div>
  <div
    class="ant-col ant-col-12 css-var-root"
    style="padding-left: 8px; padding-right: 8px;"
  >
    <div
      class="ant-statistic css-var-root"
    >
      <div
        class="ant-statistic-header"
      >
        <div
          class="ant-statistic-title"
        >
          Countdown
        </div>
      </div>
      <div
        class="ant-statistic-content"
      >
        <!---->
        <span
          class="ant-statistic-content-value"
        >
          -
        </span>
        <!---->
      </div>
    </div>
  </div>
  <div
    class="ant-col ant-col-12 css-var-root"
    style="padding-left: 8px; padding-right: 8px;"
  >
    <div
      class="ant-statistic css-var-root"
    >
      <div
        class="ant-statistic-header"
      >
        <div
          class="ant-statistic-title"
        >
          Countup
        </div>
      </div>
      <div
        class="ant-statistic-content"
      >
        <!---->
        <span
          class="ant-statistic-content-value"
        >
          -
        </span>
        <!---->
      </div>
    </div>
  </div>
  <div
    class="ant-col ant-col-24 css-var-root"
    style="padding-left: 8px; padding-right: 8px; margin-top: 32px;"
  >
    <div
      class="ant-statistic css-var-root"
    >
      <div
        class="ant-statistic-header"
      >
        <div
          class="ant-statistic-title"
        >
          Day Level (Countdown)
        </div>
      </div>
      <div
        class="ant-statistic-content"
      >
        <!---->
        <span
          class="ant-statistic-content-value"
        >
          -
        </span>
        <!---->
      </div>
    </div>
  </div>
  <div
    class="ant-col ant-col-24 css-var-root"
    style="padding-left: 8px; padding-right: 8px; margin-top: 32px;"
  >
    <div
      class="ant-statistic css-var-root"
    >
      <div
        class="ant-statistic-header"
      >
        <div
          class="ant-statistic-title"
        >
          Day Level (Countup)
        </div>
      </div>
      <div
        class="ant-statistic-content"
      >
        <!---->
        <span
          class="ant-statistic-content-value"
        >
          -
        </span>
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`statistic demo > renders unit correctly 1`] = `
<div
  class="ant-row css-var-root"
  style="margin-left: -8px; margin-right: -8px;"
>
  <div
    class="ant-col ant-col-12 css-var-root"
    style="padding-left: 8px; padding-right: 8px;"
  >
    <div
      class="ant-statistic css-var-root"
    >
      <div
        class="ant-statistic-header"
      >
        <div
          class="ant-statistic-title"
        >
          Feedback
        </div>
      </div>
      <div
        class="ant-statistic-content"
      >
        <span
          class="ant-statistic-content-prefix"
        >
          <span
            aria-label="like"
            class="anticon anticon-like"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="like"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M885.9 533.7c16.8-22.2 26.1-49.4 26.1-77.7 0-44.9-25.1-87.4-65.5-111.1a67.67 67.67 0 00-34.3-9.3H572.4l6-122.9c1.4-29.7-9.1-57.9-29.5-79.4A106.62 106.62 0 00471 99.9c-52 0-98 35-111.8 85.1l-85.9 311H144c-17.7 0-32 14.3-32 32v364c0 17.7 14.3 32 32 32h601.3c9.2 0 18.2-1.8 26.5-5.4 47.6-20.3 78.3-66.8 78.3-118.4 0-12.6-1.8-25-5.4-37 16.8-22.2 26.1-49.4 26.1-77.7 0-12.6-1.8-25-5.4-37 16.8-22.2 26.1-49.4 26.1-77.7-.2-12.6-2-25.1-5.6-37.1zM184 852V568h81v284h-81zm636.4-353l-21.9 19 13.9 25.4a56.2 56.2 0 016.9 27.3c0 16.5-7.2 32.2-19.6 43l-21.9 19 13.9 25.4a56.2 56.2 0 016.9 27.3c0 16.5-7.2 32.2-19.6 43l-21.9 19 13.9 25.4a56.2 56.2 0 016.9 27.3c0 22.4-13.2 42.6-33.6 51.8H329V564.8l99.5-360.5a44.1 44.1 0 0142.2-32.3c7.6 0 15.1 2.2 21.1 6.7 9.9 7.4 15.2 18.6 14.6 30.5l-9.6 198.4h314.4C829 418.5 840 436.9 840 456c0 16.5-7.2 32.1-19.6 43z"
              />
            </svg>
          </span>
        </span>
        <span
          class="ant-statistic-content-value"
        >
          <span
            class="ant-statistic-content-value-int"
          >
            1,128
          </span>
        </span>
        <!---->
      </div>
    </div>
  </div>
  <div
    class="ant-col ant-col-12 css-var-root"
    style="padding-left: 8px; padding-right: 8px;"
  >
    <div
      class="ant-statistic css-var-root"
    >
      <div
        class="ant-statistic-header"
      >
        <div
          class="ant-statistic-title"
        >
          Unmerged
        </div>
      </div>
      <div
        class="ant-statistic-content"
      >
        <!---->
        <span
          class="ant-statistic-content-value"
        >
          <span
            class="ant-statistic-content-value-int"
          >
            93
          </span>
        </span>
        <span
          class="ant-statistic-content-suffix"
        >
          / 100
        </span>
      </div>
    </div>
  </div>
</div>
`;
